applications/webapp-dev/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-dev-deployment
  namespace: webapp-dev
spec:
  selector:
    matchLabels:
      app: webapp-dev
  replicas: 2
  template:
    metadata:
      labels:
        app: webapp-dev
    spec:
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: webapp-pvc
      containers:
      - name: nginx
        image: nginx:1.31
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "700m"
          limits:
            memory: "512Mi"
        volumeMounts:
          - name: data-volume
            mountPath: /usr/share/nginx/html/speed
