applications/webapp-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-dev-svc
  namespace: webapp-dev
spec:
  selector:
    app: webapp-dev
  # externalIPs:
  #   - 10.192.168.202
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 80
