applications/webapp-dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-webapp-dev
  namespace: webapp-dev
spec:
  hostnames:
    - webapp.linuxadmin.eu
    - webapp-int.linuxadmin.eu
    - proxy.linuxadmin.eu
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway-https
      namespace: kube-system
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: webapp-dev-svc
          port: 8090
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
