applications/webapp-dev/netpol.yaml
---
# egress:
# - Internet allowed
# - block communication to other services in k8s
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-egress-external
  namespace: webapp-dev
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        # Exclude traffic to Kubernetes service IPs and pods
        except:
          - 10.0.0.0/8
          - 172.16.0.0/12
          - 192.168.0.0/16
